Api for filtering statistics by dates
