# docs/openapi/api-statistics-interop-v1.yaml
@@ -62,6 +62,68 @@ paths:
                 detail: 'There is a problem processing the request on the server.'
                 traceId: 'string'
                 errors: [ { 'code': '000-1234', 'detail': 'The server is currently down for maintenance. Please try again later.' } ]
+    
+  '/telemetryData/eservices/filtered/{eserviceRecordId}':
+    get:
+      summary: Retrive filtered e-service statistics
+      description: 'Retrive filtered e-service statistics'
+      tags:
+        - Read
+      operationId: filteredStatisticsEservices
+      parameters:
+        - name: eserviceRecordId
+          in: path
+          required: true
+          description: The e-service record id
+          schema:
+            type: integer
+            format: int64
+        - name: pollingFrequency
+          in: query
+          required: true
+          description: The e-service polling frequency
+          schema:
+            type: integer
+        - name: startDate
+          in: query
+          required: true
+          description: filters start date
+          schema:
+             type: string
+             format: date-time
+        - name: endDate
+          in: query
+          required: true
+          description: filters end date
+          schema:
+             type: string
+             format: date-time
+      responses:
+        '200':
+          description: 'The search has been successfully performed '
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatisticsEserviceResponse'
+        '400':
+          description: The provided input data is invalid
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':
+          description: A managed error has occured during the request elaboration
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+              example:
+                type: string
+                status: 500
+                title: 'Internal Server Error'
+                detail: 'There is a problem processing the request on the server.'
+                traceId: 'string'
+                errors: [ { 'code': '000-1234', 'detail': 'The server is currently down for maintenance. Please try again later.' } ]
 
   
 
