# src/main/java/it/pagopa/interop/probing/statistics/api/service/impl/TimestreamServiceImpl.java
@@ -2,6 +2,7 @@ package it.pagopa.interop.probing.statistics.api.service.impl;
 
 
 import java.io.IOException;
+import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
@@ -48,14 +49,16 @@ public class TimestreamServiceImpl implements TimestreamService {
   private Logger logger;
 
   @Override
-  public List<StatisticContent> findStatistics(Long eserviceRecordId, Integer pollingFrequency)
-      throws IOException {
+  public List<StatisticContent> findStatistics(Long eserviceRecordId, Integer pollingFrequency,
+      OffsetDateTime startDate, OffsetDateTime endDate) throws IOException {
  // @formatter:off
     String queryString = "WITH binned_timeseries AS ("
         //approximates the times using the polling frequency
         + "SELECT  BIN(time, "+pollingFrequency+"m) AS binned_timestamp, status, response_time " 
         + "FROM " + database + "." + table + " " 
-        + "WHERE time between ago(1d) and now() "
+        + "WHERE time between " 
+        + (Objects.nonNull(startDate) ? "'" + startDate.toString().replace("T", " ").replace("Z", "") + "'" : "ago(1d)") 
+        +" and "+ (Objects.nonNull(endDate) ? "'" + endDate.toString().replace("T", " ").replace("Z", "") + "'" : "now()") 
         + "and eservice_record_id = '"+ eserviceRecordId + "' " 
         + "GROUP BY  BIN(time, "+pollingFrequency+"m) , status , response_time "
         + "), interpolated_timeseries AS ( "
